// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline > it works with defaults 1`] = `
<ol
  class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e"
  data-testid="Timeline"
>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-medium_b26e6e"
        data-testid="Text"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _inner_a14c64"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_a14c64"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                fill="currentColor"
              />
            </svg>
            LendInvest
          </span>
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-medium_b26e6e"
        data-testid="Text"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _inner_a14c64"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_a14c64"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                fill="currentColor"
              />
            </svg>
            Golden Charter
          </span>
        </a>
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline > it works with sizes 1`] = `
<ol
  class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-regular_b26e6e"
  data-testid="Timeline"
>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-small_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-small_d62db4"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-small_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-medium_b26e6e"
        data-testid="Text"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _inner_a14c64"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_a14c64"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                fill="currentColor"
              />
            </svg>
            LendInvest
          </span>
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-small_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-small_d62db4"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-small_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-medium_b26e6e"
        data-testid="Text"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _inner_a14c64"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_a14c64"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                fill="currentColor"
              />
            </svg>
            Golden Charter
          </span>
        </a>
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline > it works with sizes 2`] = `
<ol
  class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e"
  data-testid="Timeline"
>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-medium_b26e6e"
        data-testid="Text"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _inner_a14c64"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_a14c64"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                fill="currentColor"
              />
            </svg>
            LendInvest
          </span>
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-medium_b26e6e"
        data-testid="Text"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _inner_a14c64"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_a14c64"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                fill="currentColor"
              />
            </svg>
            Golden Charter
          </span>
        </a>
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline > it works with sizes 3`] = `
<ol
  class="_this_b26e6e _size-large_b26e6e _family-body_b26e6e _weight-regular_b26e6e"
  data-testid="Timeline"
>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-large_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-large_d62db4"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-large_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_b26e6e _size-large_b26e6e _family-body_b26e6e _weight-medium_b26e6e"
        data-testid="Text"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-large_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _inner_a14c64"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_a14c64"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                fill="currentColor"
              />
            </svg>
            LendInvest
          </span>
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-large_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-large_d62db4"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-large_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_b26e6e _size-large_b26e6e _family-body_b26e6e _weight-medium_b26e6e"
        data-testid="Text"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-large_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _inner_a14c64"
            data-testid="Link-inner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-right-from-square _icon_a14c64"
              data-icon="arrow-up-right-from-square"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
                fill="currentColor"
              />
            </svg>
            Golden Charter
          </span>
        </a>
      </div>
    </div>
  </li>
</ol>
`;
